Added JavaFX linking